fix stacking and dark mode transition

--- a/theme/styles/index.styl
+++ b/theme/styles/index.styl
@@ -7,6 +7,12 @@
   --header-height: 3.25rem;
   --main-height: calc(100vh - 4.75rem);
   --footer-height: 1.5rem;
+  --transition-duration: 0.5s;
+}
+
+* {
+  transition-duration: var(--transition-duration);
+  transition-property: all;
 }
 
 html,
